force-app/main/default/objects/MedPay_Deposit__c/MedPay_Deposit__c.object-meta.xml
<CustomObject>
    <label>MedPay Deposit</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>MedPay Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPay Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>