force-app/main/default/objects/MedPay_Deposit__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>litify_pm__Insurance__c</referenceTo>
    <relationshipLabel>MedPay Deposits</relationshipLabel>
    <relationshipName>MedPay_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>